kubernetes/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-app
  labels:
    app: your-app
  namespace: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: your-app
  template:
    metadata:
      labels:
        app: your-app
    spec:
      imagePullSecrets:
      - name: gitlab-registry-secret
      containers:
      - name: your-app-container
        image: __IMAGE_NAME_PLACEHOLDER__:__IMAGE_TAG_PLACEHOLDER__
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
