kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: developlent-starter-service
spec:
  selector:
    app: developlent-starter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
